Fix 'spacing-large' class not working
Because I'm importing a value also called spacing-large the loader is confused when I call:

```
composes: spacing-large from "...";
```

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -20,6 +20,6 @@
 }
 
 .logo {
+  composes: spacing-secondary from "../shared/css/layout.css";
   composes: font-bold size-primary from "../shared/css/typography.css";
-  composes: spacing-large from "../shared/css/layout.css";
 }
